<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="net.pepenieto.latchdroid.MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/llPairToken">

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:inputType="textPersonName"
                android:ems="10"
                android:layout_marginLeft="15dp"
                android:layout_marginStart="15dp"
                android:id="@+id/etPairToken"
                android:hint="@string/pairToken"
                android:width="0px"
                android:layout_weight="1" />

            <Button
                android:text="@string/pair"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/btnPairToken"
                android:width="0px"
                android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/llUnpairToken">


            <Button
                android:text="@string/unpair"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/btnUnpairToken"
                android:width="0px"
                android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvIsAdmin"
                android:layout_weight="1" />

            <Button
                android:text="@string/makeAdmin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnMakeAdmin"
                android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <CheckBox
                    android:text="@string/remoteLock"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/cbRemoteLock"
                    android:layout_weight="1" />
        </LinearLayout>


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/noConnection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView"
                android:layout_weight="1" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <RadioGroup
                    android:id="@+id/rgWhenNoConnection"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >


                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/rbOn"
                    android:layout_weight="1"
                    android:text="@string/on" />

                    <RadioButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/rbOff"
                        android:layout_weight="1"
                        android:text="@string/off" />

                    <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/rbLast"
                    android:layout_weight="1"
                        android:text="@string/last" />

                </RadioGroup>

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvError"
            android:textColor="@android:color/holo_red_dark"
            android:textStyle="normal|bold"
            android:layout_weight="1" />

        <Button
            android:text="@string/start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnStart" />

    </LinearLayout>

</RelativeLayout>
